--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "1.1.0",
   "description": " Get the lyrics of what you're listening on Tidal",
   "main": "src/index.js",
+  "win": {
+    "icon": "./images/icon.png"
+  },
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
@@ -25,7 +28,9 @@
         {
           "name": "@electron-forge/maker-squirrel",
           "config": {
-            "name": "tidal_lyrics"
+            "name": "tidal_lyrics",
+            "setupIcon": "./icon.ico",
+            "iconUrl": "./icon.ico"
           }
         },
         {
