--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "tidal-lyrics",
   "productName": "tidal-lyrics",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": " Get the lyrics of what you're listening on Tidal",
   "main": "src/index.js",
   "win": {
-    "icon": "./images/icon.png"
+    "icon": "./icon.ico"
   },
   "scripts": {
     "start": "electron-forge start",
@@ -23,14 +23,15 @@
   "license": "MIT",
   "config": {
     "forge": {
-      "packagerConfig": {},
+      "packagerConfig": {
+        "icon": "icon.ico"
+      },
       "makers": [
         {
           "name": "@electron-forge/maker-squirrel",
           "config": {
             "name": "tidal_lyrics",
-            "setupIcon": "./icon.ico",
-            "iconUrl": "./icon.ico"
+            "iconUrl": "https://raw.githubusercontent.com/1nikolas/tidal-lyrics/master/icon.ico"
           }
         },
         {
