--- a/package.json
+++ b/package.json
@@ -35,11 +35,10 @@
           }
         },
         {
-          "name": "@electron-forge/maker-dmg",
-          "config": {
-            "background": "./assets/dmg-background.png",
-            "format": "ULFO"
-          }
+          "name": "@electron-forge/maker-zip",
+          "platforms": [
+            "darwin"
+          ]
         },
         {
           "name": "@electron-forge/maker-deb",
@@ -50,10 +49,9 @@
           "config": {}
         }
       ]
-  }
-},
+    }
+  },
   "dependencies": {
-    "@electron-forge/maker-dmg": "^6.0.0-beta.53",
     "electron-main-window": "^1.0.4",
     "electron-squirrel-startup": "^1.0.0",
     "node-process-windows": "0.0.2",
@@ -66,8 +64,6 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.53",
     "@electron-forge/maker-zip": "^6.0.0-beta.53",
     "electron": "10.1.1",
-    "electron-rebuild": "^2.0.2",
-    "electron-prebuilt-compile": "8.2.0"
+    "electron-rebuild": "^2.0.2"
   }
 }
-
